2006-05-12  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ipifcons.h: Cleanup.
	* include/ipxconst.h: Fix header guard.
	* include/ipxrtdef.h: include <ipxconst.h>.

2006-05-11  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ipxrtdef.h: Cleanup.
	(IPX_INTERFACE_INFO_TYPE,IPX_STATIC_ROUTE_INFO_TYPE)
	(IPX_STATIC_SERVICE_INFO_TYPE,IPX_SERVICE_FILTER_INFO_TYPE)
	(IPX_ROUTE_FILTER_INFO_TYPE,IPX_IN_TRAFFIC_FILTER_INFO_TYPE)
	(IPX_ADAPTER_INFO_TYPE,IPXWAN_INTERFACE_INFO_TYPE,IPX_GLOBAL_INFO_TYPE)
	(IPX_STATIC_NETBIOS_NAME_INFO_TYPE)
	(IPX_IN_TRAFFIC_FILTER_GLOBAL_INFO_TYPE)
	(IPX_OUT_TRAFFIC_FILTER_INFO_TYPE)
	(IPX_OUT_TRAFFIC_FILTER_GLOBAL_INFO_TYPE): Define.
	* include/routprot.h: Cleanup.
	(PROTO_IP_*,IPRTRMGR_PID,IPX_PROTOCOL_*): Define.
	* include/fltdefs.h: New file.
	* include/ipinfoid.h: New file.

2006-05-11  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/strmif.h (IAMAnalogVideoDecoder,IAMAudioInputMixer)
	(IAMAudioRendererStats,IAMBufferNegotiation,IAMCameraControl)
	(IAMCertifiedOutputProtection): Add interfaces.
	* include/adsprop.h: New file.
	* include/cmnquery.h: New file.
	* include/dsadmin.h: New file.
	* include/dsclient.h: New file.
	* include/dsgetdc.h: New file.
	* include/dsquery.h: New file.
	* include/dsrole.h: New file.
	* include/ntdsapi.h: New file.
	* include/ntdsbcli.h: New file.
	* include/objsel.h: New file.

2006-05-10  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/qedit.h (DEXTER_*,SCompFmt0): Add structures.
	(DEXTERF_TRACK_SEARCH_FLAGS,TIMELINE_MAJOR_TYPE): Add enums.
	(CONNECTF_DYNAMIC_*,SFN_VALIDATEF_*,RESIZEF_*): Define.

2006-05-10  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/qedit.h: New file.
	* include/errors.h: Cleanup.

2006-05-10  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/amvideo.h (BIT_MASKS_MATCH): Don't use memcmp to
	avoid dependency on <string.h>.
	There's no Win32 equivalent for memcmp: